--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Hello World!</h1>
-<p>Welcome to my first static web page./p>
+<p>Welcome to my first static web page. This is just a simple HTML demo.</p>
 
 </body>
 </html>
